# prices_from_json

./: CMakeLists.txt  PerfNumsEURAUD.pdf:Zone.Identifier  README.md  exercise.txt
config/: config.hpp.in
include/: config.hpp  constants.hpp  parser.hpp  parser.inl  quote.hpp  thread_pool.hpp  utils.hpp
src/: main.cpp
tests/: CMakeLists.txt  quote.cpp
